<resources>
    <string name="app_name">AIB</string>
    <string name="logo">Logo(EN)</string>
    <string name="correo">augusto.bet4@gmail.com</string>
    <string name="menu_bt1">Auto Parts</string>
    <string name="menu_bt2">Cars</string>
    <string name="nombre">Full Name:</string>
    <string name="mail">E-Mail:</string>
    <string name="model">Make/Model:</string>
    <string name="anio">Year:</string>
    <string name="anio_hint">1917 - 2017</string>
    <string name="parte">Autopart:</string>
    <string name="especifico">Specification:</string>
    <string name="especifico_hint">Specify the autopart you need</string>
    <string name="enviar">Send</string>
    <string name="borrar">Reset</string>
    <string name="it_name">Full name required</string>
    <string name="it_mail">E-Mail required</string>
    <string name="it_anio">Year required</string>
    <string name="it_anio2">Enter a valid year</string>
    <string name="it_espe">Specification required</string>
    <string name="op">Select an Option</string>
    <string name="err_mod">Select an option in Make/Model</string>
    <string name="err_parts">Select an option in Autoparts</string>
    <string name="subject">Auto Parts Order</string>
    <string name="lang">English</string>
    <string name="send">Send email.</string>
    <string name="main.tv.mensaje">Where cars and auto parts are at the best prices</string>
</resources>